# Chessington

./: README.md
The Reworked Engine/: CMakeLists.txt  main
The Reworked Engine/Boost_tests/: CMakeLists.txt  moveGenerationTests.cpp  movegenTests.cpp
The Reworked Engine/Boost_tests/[Move Generation] Unit Tests/: genKingBlockers.cpp
The Reworked Engine/logs/: multi-thread.txt  single-thread.txt
The Reworked Engine/logs/games/: game-288.txt  game-293.txt  game-298.txt  game-299.txt  game-302.txt  game-311.txt  game-323.txt  game-325.txt  game-327.txt  game-328.txt  game-329.txt  game-338.txt  game-339.txt  game-341.txt  game-344.txt  game-346.txt  game-350.txt  game-354.txt  game-359.txt  game-361.txt  game-363.txt  game-367.txt  game-368.txt  game-370.txt  game-371.txt  game-375.txt  game-379.txt  game-381.txt
The Reworked Engine/logs/games/old games/: game-102.txt  game-108.txt  game-113.txt  game-116.txt  game-119.txt  game-120.txt  game-121.txt  game-127.txt  game-135.txt  game-136.txt  game-139.txt  game-14.txt  game-140.txt  game-141.txt  game-143.txt  game-144.txt  game-146.txt  game-148.txt  game-149.txt  game-15.txt  game-150.txt  game-151.txt  game-159.txt  game-16.txt  game-163.txt  game-164.txt  game-168.txt  game-171.txt  game-177.txt  game-179.txt  game-182.txt  game-183.txt  game-185.txt  game-186.txt  game-187.txt  (+65 more)
The Reworked Engine/src/: bitboards.cpp  board.cpp  board.h  debug.cpp  main.cpp  movegen.cpp  perft.cpp  types.h
The Reworked Engine/src/Board/: CMakeLists.txt  bitboards.cpp  board.cpp  board.h  makemove.cpp  movegen.cpp
(+293 files in other folders)
